--- a/TodoListApi/TodoListApi/appsettings.json
+++ b/TodoListApi/TodoListApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Connection": "Server=DESKTOP-G3R6D2I;Database=DB_TodoList;Trusted_Connection=True;TrustServerCertificate=True;"
+    }
 }
